Alignment text toggling when object select textALignment and show this alignment 2: solve redmine issues

--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -168,8 +168,8 @@ http://ionicframework.com/docs/theming/ */
     /*--ion-color-step-100: #1a1a1a;*/
     /*--ion-color-step-150: #262626;*/
     /*--ion-color-step-200: #333333;*/
-    --ion-color-step-250: #404040;
-    --ion-color-step-300: #4d4d4d;
+    /*--ion-color-step-250: #404040;*/
+    /*--ion-color-step-300: #4d4d4d;*/
     --ion-color-step-350: #595959;
     --ion-color-step-400: #666666;
     --ion-color-step-450: #737373;
@@ -190,7 +190,7 @@ http://ionicframework.com/docs/theming/ */
   }
 
   .ios ion-modal {
-    --ion-background-color: var(--ion-color-step-100);
+    /*--ion-background-color: var(--ion-color-step-100);*/
     --ion-toolbar-background: var(--ion-color-step-150);
     --ion-toolbar-border-color: var(--ion-color-step-250);
   }
@@ -213,8 +213,8 @@ http://ionicframework.com/docs/theming/ */
     /*--ion-color-step-50: #1e1e1e;*/
     /*--ion-color-step-100: #2a2a2a;*/
     /*--ion-color-step-150: #363636;*/
-    --ion-color-step-200: #414141;
-    --ion-color-step-250: #4d4d4d;
+    /*--ion-color-step-200: #414141;*/
+    /*--ion-color-step-250: #4d4d4d;*/
     --ion-color-step-300: #595959;
     --ion-color-step-350: #656565;
     --ion-color-step-400: #717171;
